Fix card padding on mobile on agenda page

--- a/wordpress/wp-content/themes/knock-knock/assets/scss/_card.scss
+++ b/wordpress/wp-content/themes/knock-knock/assets/scss/_card.scss
@@ -28,5 +28,7 @@
 }
 
 .item-grow {
-  height: calc(100% - #{$grid-gutter-width});
+  @include media-breakpoint-up(md) {
+    height: calc(100% - #{$grid-gutter-width});
+  }
 }
